<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, StartActivity!</string>
    <string name="app_name">Printerdroid</string>
    <!-- Tab Strings -->
    
    <!-- Menu Strings -->
    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_preferences">Preferences</string>
    <string name="send">Send</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
    <string name="retry">Retry</string>
    <string name="loadfile">Load File</string>
    <string name="print">Print</string>
    <string name="nofileloaded">No File Loaded</string>
    <string name="preferences">Printerdroid Preferences</string>
    <string name="heater_set_temp">Set Temp</string>
    <string name="baudrate">Baudrate</string>
    <string name="bedtemp">Bed Temperature</string>
    <string name="heatertemp">Heater Temperature</string>
    <string name="summary_heatertemp">Extruder heater temperature</string>
    <string name="summary_bedtemp">Bed heater temperature</string>
    <string name="bedtempindicator">"Bed Temp: "</string>
    <string name="heatertempindicator">"Heater Temp: "</string>
    <string name="currentlayer">Current Layer: </string>
    <string name="turn_on">"Turn On: "</string>
    <string name="turn_off">"Turn Off: "</string>
    <string name="degrees_centegrade">°C</string>
    <string name="turn_on_printer">Printer On</string>
    <string name="turn_off_printer">Printer Off</string>
    <string name="print_status">Print Status</string>
    <string name="home">Home</string>
    <string name="current_file_progress">"Current File Progress: "</string>
</resources>