<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
   
    <PreferenceCategory android:title="Printer Properties" android:key="prefs_printer">
         <EditTextPreference android:negativeButtonText="@android:string/cancel" android:dialogTitle="Bed Width" android:positiveButtonText="@android:string/ok" android:title="Bed Width" android:key="pref_bed_width" android:defaultValue="200" android:numeric="integer"/>
    <EditTextPreference android:negativeButtonText="@android:string/cancel" android:dialogTitle="Bed Height" android:positiveButtonText="@android:string/ok" android:title="Bed Height" android:key="pref_bed_height" android:defaultValue="200" android:numeric="integer"/>
    <EditTextPreference android:dialogTitle="@string/baudrate" android:negativeButtonText="@android:string/cancel" android:positiveButtonText="@android:string/ok" android:key="pref_baudrate" android:title="@string/baudrate" android:defaultValue="9600"/>
    <EditTextPreference android:key="pref_heater_default_temp" android:title="@string/heatertemp" android:positiveButtonText="@android:string/ok" android:negativeButtonText="@android:string/cancel" android:summary="@string/summary_heatertemp" android:dialogTitle="Heater Temp" android:defaultValue="180"/>
    <EditTextPreference android:dialogTitle="Heater Default Temperature" android:positiveButtonText="@android:string/ok" android:negativeButtonText="@android:string/cancel" android:title="@string/bedtemp" android:key="pref_bed_default_temp" android:summary="@string/summary_bedtemp" android:defaultValue="80"/>
    </PreferenceCategory>

</PreferenceScreen>
