<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickPrint"
            android:text="@string/print" />

        <Button
            android:id="@+id/loadfilebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickLoadFile"
            android:text="@string/loadfile" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.multiplemonomials.printerdroid.view.BarView
            android:id="@+id/barView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.59" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heatertemp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.multiplemonomials.printerdroid.view.BarView
            android:id="@+id/barView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.59" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heatertemp" />
    </LinearLayout>

</LinearLayout>